force-app/main/default/objects/Webhook_Settings__c/Webhook_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a custom setting to store the Webhook/Action API key information for each user.</description>
    <label>Action API Key Settings</label>
</CustomObject>