force-app/main/default/objects/Webhook_Settings__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Actions executed by the API key.</description>
    <inlineHelpText>Actions executed by the API key.</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>