force-app/main/default/objects/Webhook_Settings__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of the API key&apos;s validity.</description>
    <inlineHelpText>End Date of the API key&apos;s validity.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>