force-app/main/default/objects/Webhook_Settings__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>This is the Webhook API encrypted key.</description>
    <inlineHelpText>This is the Webhook API encrypted key.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>