force-app/main/default/objects/Webhook_Settings__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of the API key&apos;s validity.</description>
    <inlineHelpText>Start Date of the API key&apos;s validity.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>