force-app/main/default/objects/Webhook_Settings__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>User Id of the API key owner.</description>
    <inlineHelpText>User Id of the API key owner.</inlineHelpText>
    <label>UserId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>